fix: modify title and fix overflow hidden issue

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -81,7 +81,7 @@
         }
 
         h1 {
-            font-size: 6.5vw;
+            font-size: 7.5vw;
             line-height: 1.3em;
         }
     }
